--- a/main.html
+++ b/main.html
@@ -7,10 +7,29 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<form>
+		<h3>Feedback Form</h3>
+		<div>
+			<label for="name">Name</label>
+			<input type="text"id="name" required> 
+		</div>
+		<div>
+			<label for="portfolio">Portfolio</label>
+			<input id="portfolio" required> 
+		</div>
+		<div>
+			<label for="favcolor">FavColor</label>
+			<input type="color"id="FavColor"> 
+		</div>
+		<div>
+			<label for="likeness">Likeness</label>
+			<input type="range" id="likeness" min="1" max="100">
+		</div>
+		
+		
+		
+	</form>
+	
 </body>
 
 </html>
