--- a/main.html
+++ b/main.html
@@ -7,11 +7,12 @@
 </head>
 
 <body>
+	<form method="post">
 	<form>
 		<h3>Feedback Form</h3>
 		<div>
 			<label for="name">Name</label>
-			<input type="text"id="name" required> 
+			<input type="text"id="name" min="3" max="50"required> 
 		</div>
 		<div>
 			<label for="portfolio">Portfolio</label>
@@ -25,9 +26,6 @@
 			<label for="likeness">Likeness</label>
 			<input type="range" id="likeness" min="1" max="100">
 		</div>
-		
-		
-		
 	</form>
 	
 </body>
