--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<h3>Feedback Form</h3>
 		<div>
 			<label for="name">Name</label>
-			<input type="text"id="name" minlength="3" max="50"required> 
+			<input type="text"id="name" minlength="3" maxlength="50"required> 
 		</div>
 		<div>
 			<label for="portfolio">Portfolio</label>
@@ -24,7 +24,7 @@
 		</div>
 		<div>
 			<label for="likeness">Likeness</label>
-			<input type="range" id="likeness" minlength="1" max="100">
+			<input type="range" id="likeness" minlength="1" maxlength="100">
 		</div>
 	</form>
 	
