--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		</div>
 		<div>
 			<label for="portfolio">Portfolio</label>
-			<input id="portfolio" required> 
+			<input type="url" id="portfolio" > 
 		</div>
 		<div>
 			<label for="favcolor">FavColor</label>
