--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 		</div>
 		<div>
 			<label for="favcolor">FavColor</label>
-			<input type="color"id="FavColor"> 
+			<input type="color" id="favColor"> 
 		</div>
 		<div>
 			<label for="likeness">Likeness</label>
