--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 			<input type="url" id="portfolio" > 
 		</div>
 		<div>
-			<label for="favcolor">FavColor</label>
+			<label for="favColor">FavColor</label>
 			<input type="color" id="favColor"> 
 		</div>
 		<div>
