--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 		</div>
 		<div>
 			<label for="likeness">Likeness</label>
-			<input type="range" id="likeness" minlength="1" maxlength="100">
+			<input type="range" id="likeness" min="1" max="100">
 		</div>
 	</form>
 	
